# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-03-16 18:06:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-52

    Summary:
      catalog, lazy load the indexes
    Revision:
      itools--main--0.7--patch-52

    Now the data from the indexes is loaded as late as possible (lazy).

    modified files:
     Changelog catalog/IIndex.py


2005-03-16 14:44:07 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-51

    Summary:
      catalog, optimize index load
    Revision:
      itools--main--0.7--patch-51

    Index loading has been optimized again. Now we read the full "tree"
    resource data into memory, instead of accessing the resource for
    every slot.

    modified files:
     Changelog catalog/IIndex.py


2005-03-16 14:37:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      catalog, optimize index load
    Revision:
      itools--main--0.7--patch-50

    Now the loading an index is faster. Indexes are stored in two
    resources, "tree" and "documents". Before both were loaded at
    the first access, now only the first one. Documents are loaded
    when needed (lazy load).

    modified files:
     Changelog catalog/IIndex.py


2005-03-14 15:51:19 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-49

    Summary:
      handlers, now "abspath" is "/" for the root instead of "" (#13)
    Revision:
      itools--main--0.7--patch-49

    This way the root handler can be indexed by the "abspath" attribute.
    Fixes bug #13.

    modified files:
     Changelog handlers/Handler.py


2005-03-13 19:49:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48

    Summary:
      get ready to release 0.7.3
    Revision:
      itools--main--0.7--patch-48


    modified files:
     CHANGES.txt Changelog setup.py


2005-03-13 19:19:55 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47

    Summary:
      catalog, fix unindex
    Revision: